<resources>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="app_name">Mioper</string>
    <string name="title_activity_maps">Map</string>
    <string name="titulo_cadastro">Cadastrar uma conta</string>
    <string name="titulo_login">Acessar minha conta</string>
    <string name="title_activity_passageiro">PassageiroActivity</string>
    <string name="title_activity_corrida">CorridaActivity</string>
    <string name="menu_navegacao">Navegue com o Mioper</string>
    <string name="menu_dados">Meus Dados</string>
    <string name="menu_pagamentos">Gerenciar Pagamentos</string>
    <string name="menu_historico_de_viagens">Histórico de Viagens</string>
    <string name="menu_indique_e_ganhe">Indique e Ganhe</string>
    <string name="menu_suporte_usuario">Suporte ao Usuário</string>
    <string name="menu_sobre_nos">Sobre Nós</string>
    <string name="menu_sair">Sair</string>
    <string name="facebook_app_id">2388688338068853</string>
    <string name="fb_login_protocol_scheme">fb2388688338068853</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">2486ca8630c32215f629f21be63aa984</string>
    <string name="back4app_client_key">Cbecwmh34y3ovRkuCfHsqEcozbZ4jh0sPFvCIvY7</string>
    <string name="descricao">Insira seu e-mail cadastrado para que enviemos a você um link para a redefinição de senha:</string>
    <string name="error_invalid_password">Senha Incorreta</string>
    <string name="error_invalid_email">Email incorreto</string>
    <string name="error_field_required">Email Incorreto</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MIOPER</string>
    <string name="nav_header_subtitle">Mioper@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_meus_dados">Meus Dados</string>
    <string name="menu_navegue_mioper">Navegue com o Mioper</string>
    <string name="menu_payment">Gerenciar Pagamentos</string>
    <string name="menu_travel_history">Histórico de Viagens</string>
    <string name="menu_indicate">Indique e Ganhe</string>
    <string name="menu_usuario">Suporte ao Usuário</string>
    <string name="menu_exit">Sair</string>
    <string name="menu_about_us">Sobre nós</string>
    <string name="title_activity_meus_dados">MeusDados</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="title_activity_gerenciar_pagamentos">GerenciarPagamentos</string>
    <string name="title_activity_historico_viagens">HistoricoViagens</string>
    <string name="title_activity_indique_ganhe">IndiqueGanhe</string>
    <string name="title_activity_jogo">Jogo</string>
    <string name="formas_de_pagamento">Formas de pagamento</string>
    <string name="config_credit_cards_tab_list">CARTÕES</string>
    <string name="credit_card_removed">Cartão de crédito removido com sucesso.</string>
    <string name="credit_card_number_label">Número:</string>
    <string name="remove_item">Remover</string>
    <string name="remove_item_going">Removendo&#8230;</string>
    <string name="home_second">Home Second</string>
    <string name="app_name2">Custom Dialog</string>
    <string name="success">Sucesso</string>
    <string name="warning">Aviso</string>
    <string name="error">Erro</string>
    <string name="success_title">Confirmar Operação</string>
    <string name="warning_title">Confirmar Operação</string>
    <string name="error_title">Confirmar Operação</string>
    <string name="text_desc">Deseja confirmar a operação?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="app_name_excluir_conta">Custom Dialog</string>
    <string name="success_excluir_conta">Sucesso</string>
    <string name="warning_excluir_conta">Aviso</string>
    <string name="error_excluir_conta">Erro</string>
    <string name="success_title_excluir_conta">Confirmar Exclusão</string>
    <string name="warning_title_excluir_conta">Confirmar Exclusão</string>
    <string name="error_title_excluir_conta">Confirmar Exclusão</string>
    <string name="text_desc_excluir_conta">Deseja realmente excluir sua conta ?</string>
    <string name="app_name_alterar_conta">Custom Dialog</string>
    <string name="success_alterar_conta">Sucesso</string>
    <string name="warning_alterar_conta">Aviso</string>
    <string name="error_alterar_conta">Erro</string>
    <string name="success_title_alterar_conta">Confirmar Alteraçãp</string>
    <string name="warning_title_alterar_conta">Confirmar Alteração</string>
    <string name="error_title_alterar_conta">Confirmar Alteração</string>
    <string name="text_desc_alterar_conta">Deseja confirmar a alteração de senha ?</string>
    <string name="app_name_excluir_ok_conta">Custom Dialog</string>
    <string name="success_excluir_ok_conta">Sucesso</string>
    <string name="warning_excluir_ok_conta">Aviso</string>
    <string name="error_excluir_ok_conta">Erro</string>
    <string name="success_title_excluir_ok_conta">Obrigado por utilizar o Mioper</string>
    <string name="warning_title_excluir_ok_conta">Obrigado por utilizar o Mioper</string>
    <string name="error_title_excluir_ok_conta">Obrigado por utilizar o Mioper</string>
    <string name="text_desc_excluir_ok_conta">Sua conta foi excluída com sucesso. Esperamos te-lo de volta!</string>
    <string name="app_name_excluir_tempo_ok_conta">Custom Dialog</string>
    <string name="success_excluir_tempo_ok_conta">Sucesso</string>
    <string name="warning_excluir_tempo_ok_conta">Aviso</string>
    <string name="error_excluir_tempo_ok_conta">Erro</string>
    <string name="success_title_tempo_excluir_ok_conta">Aviso!</string>
    <string name="warning_title_tempo_excluir_ok_conta">Aviso!</string>
    <string name="error_title_tempo_excluir_ok_conta">Aviso!</string>
    <string name="text_desc_tempo_excluir_ok_conta">Devido a você estar muito tempo logado, será necessário que refaça o login para que possa excluir sua conta.</string>
    <string name="app_name_redefinir_ok_conta">Custom Dialog</string>
    <string name="success_redefinir_ok_conta">Sucesso</string>
    <string name="warning_redefinir_ok_conta">Aviso</string>
    <string name="error_redefinir_ok_conta">Erro</string>
    <string name="success_title_redefinir_ok_conta">Aviso!</string>
    <string name="warning_title_redefinir_ok_conta">Aviso!</string>
    <string name="error_title_redefinir_ok_conta">Aviso!</string>
    <string name="text_desc_redefinir_ok_conta">Para sua segurança o processo de reset de senha é realizado em duas etapas. Verifique seu e-mail!</string>
    <string name="app_name_cadastro_cartao">Custom Dialog</string>
    <string name="success_cadastro_cartao">Sucesso</string>
    <string name="warning_cadastro_cartao">Aviso</string>
    <string name="error_cadastro_cartao">Erro</string>
    <string name="success_title_cadastro_cartao">Confirmação</string>
    <string name="warning_title_cadastro_cartao">Confirmação</string>
    <string name="error_title_cadastro_cartao">Confirmação</string>
    <string name="text_desc_cadastro_cartao">Deseja confirmar a operação?</string>
    <string name="app_name_requisicao">Custom Dialog</string>
    <string name="success_requisicao">Sucesso</string>
    <string name="warning_requisicao">Aviso</string>
    <string name="error_requisicao">Erro</string>
    <string name="success_title_requisicao">Confirmação</string>
    <string name="warning_title_requisicao">Confirmação</string>
    <string name="error_title_requisicao">Confirmação</string>
    <string name="text_desc_requisicao">Deseja realmente sair?</string>
    <string name="app_name_nao_motorista">Custom Dialog</string>
    <string name="success_nao_motorista">Sucesso</string>
    <string name="warning_nao_motorista">Aviso</string>
    <string name="error_nao_motorista">Erro</string>
    <string name="success_title_nao_motorista">Aviso!</string>
    <string name="warning_title_nao_motorista">Aviso!</string>
    <string name="error_title_nao_motorista">Aviso!</string>
    <string name="text_desc_nao_motorista">Não foi possível recuperar suas informações. Por favor efetue o login novamente.</string>
    <string name="app_name_ok">Custom Dialog</string>
    <string name="success_ok">Sucesso</string>
    <string name="warning_ok">Aviso</string>
    <string name="error_ok">Erro</string>
    <string name="success_title_ok">Aviso!</string>
    <string name="warning_title_ok">Aviso!</string>
    <string name="error_title_ok">Aviso!</string>
    <string name="text_desc_ok_viagem_cancelada">Requisição cancelada pelo usuário.</string>
    <string name="warning_sair_ok">Aviso</string>
    <string name="error_sair_ok">Erro</string>
    <string name="success_title_sair_ok">Aviso!</string>
    <string name="warning_title_sair_ok">Aviso!</string>
    <string name="error_title_sair_ok">Aviso!</string>
    <string name="text_desc_sair_ok">Deseja realmente sair?</string>
    <string name="warning_sair_gps_ok">Aviso</string>
    <string name="error_sair_gps_ok">Erro</string>
    <string name="success_title_sair_gps_ok">Aviso!</string>
    <string name="warning_title_sair_gps_ok">Aviso!</string>
    <string name="error_title_sair_gps_ok">Aviso!</string>
    <string name="text_desc_sair_gps_ok">A localização do seu celular está desativada. Para viajar com o Mioper será necessário ativa-la. Deseja ativar a localização?</string>
    <string name="app_name_enc_viagem">Custom Dialog</string>
    <string name="success_enc_viagem">Sucesso</string>
    <string name="warning_enc_viagem">Aviso</string>
    <string name="error_enc_viagem">Erro</string>
    <string name="success_title_enc_viagem">Total da Viagem</string>
    <string name="warning_title_enc_viagem">Total da Viagem</string>
    <string name="error_title_enc_viagem">Total da Viagem</string>
    <string name="text_desc_enc_viagem">Sua viagem ficou: R$ </string>
    <string name="encerrar_viagem">Encerrar Viagem</string>
    <string name="success_title_confirme_viagem">Confirme seu Destino</string>
    <string name="textView_cidade">Cidade</string>
    <string name="textView_data">Data</string>
    <string name="textView_nome_rua">NomeRua</string>
    <string name="textView_o_que_e_o_mioper">O que é o Mioper?</string>
    <string name="textView_manifesto_mioper">Manifesto Mioper</string>
    <string name="textView_design_thinking">Design Thinking</string>
    <string name="textView_nossa_historia">Nossa Historia</string>
    <string name="textView_missao">Missão</string>
    <string name="textView_visao">Visão</string>
    <string name="textView_valores">Valores</string>
</resources>