<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/van"
            android:title="@string/menu_navegue_mioper" />
        <item
            android:id="@+id/nav_dados"
            android:icon="@drawable/data_icon"
            android:title="@string/menu_meus_dados" />
        <item
            android:id="@+id/nav_pagamento"
            android:icon="@drawable/pagamento_ic"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/travelhistory_ic"
            android:title="@string/menu_travel_history" />

        <item
            android:id="@+id/nav_suporte"
            android:icon="@drawable/ic_message_black"
            android:title="@string/menu_usuario" />
        <item
            android:id="@+id/nav_indicacao"
            android:icon="@drawable/indicate"
            android:title="@string/menu_indicate" />
    </group>

    <item android:title="Informações Adicionais">
        <menu>

            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/logo"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/exit_ic"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
