<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/textView_cidade"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textView_data" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_nome_rua" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/DarkCyan"/>
</LinearLayout>