<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal"
    tools:showIn="@layout/app_bar_sobre">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/DarkCyan"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/sobremioper"
                    >

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/logo"
                        android:layout_gravity="center"
                        />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textView_o_que_e_o_mioper"
                            android:textColor="@color/White"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:layout_marginTop="10dp"
                            />





                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="215dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        >

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/sobre"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginRight="5dp"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                
                                <ImageView
                                    android:id="@+id/imgManifesto"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/logo_mioper"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/textView_manifesto_mioper"
                                    android:textSize="14sp"
                                    android:layout_below="@+id/imgManifesto"
                                    android:layout_centerHorizontal="true"
                                    android:textStyle="bold"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btnManifesto"
                                    android:background="@color/transparent"
                                    />

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginLeft="5dp"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imgDesignThinking"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/designthinking2"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/textView_design_thinking"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:layout_below="@+id/imgDesignThinking"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btnDesignThinking"
                                    android:background="@color/transparent"
                                    />

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        >

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginRight="5dp"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imgHistoria"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:src="@drawable/historia"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/textView_nossa_historia"
                                    android:textStyle="bold"
                                    android:textSize="14sp"
                                    android:layout_below="@+id/imgHistoria"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10sp"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btnHistoria"
                                    android:background="@color/transparent"
                                    />

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginLeft="5dp"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imgMissao"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/missao"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/textView_missao"
                                    android:textStyle="bold"
                                    android:textSize="14sp"
                                    android:layout_below="@+id/imgMissao"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btnMissao"
                                    android:background="@color/transparent"
                                    />

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        >

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginRight="5dp"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imgVisao"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/visao"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/textView_visao"
                                    android:textStyle="bold"
                                    android:textSize="14sp"
                                    android:layout_below="@+id/imgVisao"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btnVisao"
                                    android:background="@color/transparent"
                                    />

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginLeft="5dp"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imgValores"
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:src="@drawable/joia"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/textView_valores"
                                    android:textStyle="bold"
                                    android:textSize="14sp"
                                    android:layout_below="@+id/imgValores"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btnValores"
                                    android:background="@color/transparent"
                                    />

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>

                    </LinearLayout>


                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>


    </ScrollView>



    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>